[project]
name = "china-bubble"
version = "0.1.0"
description = ""
dependencies = [
    "ipykernel~=6.30.1",
    "linearmodels~=6.1",
    "matplotlib>=3.10.5",
    "numpy~=2.3.2",
    "pandas~=2.3.1",
    "pyarrow~=21.0.0",
    "scikit-learn~=1.7.1",
    "scipy~=1.16.1",
    "seaborn>=0.13.2",
    "statsmodels~=0.14.5",
    "tqdm~=4.67.1",
]
